src/styles.css
/* You can add global styles to this file, and also import other style files */

.container {
    min-width: 600px;
}

.row {
    width: 100%;
    display: flex;
    cursor: pointer;
}

.column {
    display: inline-block;
    padding-top: 5px;
    min-width: 200px;
    margin: auto;
}

.column div {
    padding: 2px 7px;
}

.column .column-header-text {
    font-weight: bold;
    padding-bottom: 6px;
}

.highlightedRow {
    background-color: #ececec;
}

#search-field {
    margin-bottom: 15px;
}

#user-table {
    padding-left: 30px;
}

#header-row {
    cursor: default;
}

.mini-row {
    display: flex;
    margin: auto;
    padding: 5px;
    height: 30px;
    width: 100%;
    border-bottom: 1px solid #d6d6d6;
    position: relative;
    font-family: 'Roboto', 'Helvetica Neue', sans-serif;
    font-size: 12px;
    font-weight: 500;
}

.mini-row .cell {
    margin: auto;
    text-align: center;
}

.subtable-data-row, .dropdown-menu-item {
    cursor: pointer;
}

.subtable-header-row {
    color: rgba(0, 0, 0, 0.54);
}

